--- a/views/home.ejs
+++ b/views/home.ejs
@@ -30,7 +30,7 @@
         </header>
         <main class="px-3">
             <h1>College</h1>
-            <p class="lead"> Welcome to College! <br> Jump right in and explore our many intitutions. <br>
+            <p class="lead"> Welcome to College Quest! <br> Jump right in and explore our many intitutions. <br>
                 Feel free to share some of your own and comment on others!</p>
             <a href="/colleges" class="btn btn-lg btn-secondary font-weight-bold border-white bg-white">View
                 institutions</a>
