--- a/views/colleges/index.ejs
+++ b/views/colleges/index.ejs
@@ -1,5 +1,6 @@
 <% layout('layouts/boilerplate')%> 
-
+<div id="map" style="width: 100%; height: 300px "></div>
+<div class="container">
 <div class="container text-center"><h1>All Colleges</h1></div>
 <% for (let clg of college){%>
 <div class="card mb-3" >
@@ -28,6 +29,13 @@
     </div>
 </div>
 <% }%>
+</div>
+<script>
+    const mapToken = '<%-process.env.MAPBOX_TOKEN%>';
+    const colleges = { features: <%- JSON.stringify(college) %>}
+</script>
+
+<script src="/javascripts/clusterMap.js"></script>
 
 
 
