--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg sticky-top navbar-info " style="background-color: #a9d5f4;">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">CollegeQuest</a>
+        <a class="navbar-brand" href="/">CollegeQuest</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
             aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
