--- a/views/colleges/new.ejs
+++ b/views/colleges/new.ejs
@@ -2,7 +2,7 @@
 <div class="row">
     <h1 class="text-center">New College</h1>
     <div class="col-6 offset-3">
-        <form action="/colleges" method="POST" novalidate class="validated-form" enctype="multipart/form-data">
+        <form action="/colleges/" method="POST" novalidate class="validated-form" enctype="multipart/form-data">
             <div class="mb-3">
                 <label class="form-label" for="title">Title</label>
                 <input class="form-control" type="text" id="title" name="college[title]" required>
