--- a/views/colleges/new.ejs
+++ b/views/colleges/new.ejs
@@ -18,8 +18,8 @@
                 </div>
             </div>
             <div class="mb-3">
-                <label for="formFile" class="form-label">Add Image</label>
-                <input class="form-control" type="file" id="formFile" name="image" multiple>
+                <label for="image" class="form-label">Add Image</label>
+                <input class="form-control" type="file" id="image" name="image" multiple>
             </div>
             <!-- <div class="mb-3">
                 <label class="form-label" for="image">Image Url</label>
