--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -24,5 +24,7 @@
 
     <!-- <script src="/hello.js"></script> -->
     <script src="/javascripts/validateForms.js"></script>
+    <script crossorigin="anonymous" src="https://cdn.jsdelivr.net/npm/bs-custom-file-input/dist/bs-custom-file-input.min.js"></script>
+
 </body>
 </html>
